[project]
name = "inform"
version = '1.26.3'
description = 'print & logging utilities for communicating with user'
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["inform", "logging", "printing"]
authors = [
    {name = "Ken Kundert"},
    {email = "inform@nurdletech.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "arrow",
    "six",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "tox",
    "pylama",
]

[project.urls]
homepage = "https://inform.readthedocs.io"
documentation = "inform.readthedocs.io"
repository = "https://github.com/kenkundert/inform"
changelog = "https://github.com/kenkundert/inform/doc/releases.html"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
