[project]
name = "inform"
version = '1.35'
description = 'print & logging utilities for communicating with user'
readme = "README.rst"
keywords = ["inform", "logging", "printing"]
authors = [
    {name = "Ken Kundert"},
    {email = "inform@nurdletech.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "arrow",
    "six",
]

[project.optional-dependencies]
test = [
    "hypothesis",
    "mypy",
    "num2words",
    "pylama",
    "pytest",
    "pytest-cov",
    "quantiphy",
    "tox",
]

[project.urls]
homepage = "https://inform.readthedocs.io"
documentation = "https://inform.readthedocs.io"
repository = "https://github.com/kenkundert/inform"
changelog = "https://github.com/KenKundert/inform/blob/master/doc/releases.rst"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
exclude = [".tox", "doc", "Diffs"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"inform/__init__.py" = ["F401"]
"tests/test_debug.py" = ["F841"]
"tests/test_utilities.py" = ["F841"]
